[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/characters/applicant.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/items/job_offer/job_offer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/items/curriculum/curriculum.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameManager.gd" type="Script" id=4]

[node name="GameMainScene" type="Node2D"]
script = ExtResource( 4 )
cvScene = ExtResource( 3 )
jobOfferScene = ExtResource( 2 )
applicantScene = ExtResource( 1 )

[node name="MainScene" type="Panel" parent="."]
margin_right = 1023.0
margin_bottom = 598.0

[node name="CVContainer" type="Control" parent="MainScene"]
anchor_left = 0.065
anchor_top = 0.227
anchor_right = 0.313
anchor_bottom = 0.784
margin_left = 0.504997
margin_top = 0.253998
margin_right = -0.199036
margin_bottom = 0.167969
__meta__ = {
"_edit_use_anchors_": true
}

[node name="JobOfferContainer" type="Control" parent="MainScene"]
anchor_left = 0.411
anchor_top = 0.199
anchor_right = 0.694
anchor_bottom = 0.841
margin_left = -0.453003
margin_top = -0.0019989
margin_right = 0.0379639
margin_bottom = 0.0820007
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ApplicantContainer" type="Control" parent="MainScene"]
anchor_left = 0.728
anchor_top = 0.181
anchor_right = 0.907
anchor_bottom = 0.435
margin_left = 0.255981
margin_top = -0.238007
margin_right = 0.138916
margin_bottom = -0.130005
